--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-hce",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Emulate smart cards inside React-Native application.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -59,10 +59,13 @@
     "jest": "^26.0.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "17.0.2",
+    "react-native": "0.65.1",
     "release-it": "^13.5.8",
     "typescript": "^3.8.3"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "peerDependencies": {
     "react": "*",
